<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <!--fragment pour l'onglet Home-->
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.e_upb.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <!--fragment pour l'onglet Scolarité ic_dashboard_black_24dp.xml-->
    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.e_upb.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <!--fragment pour l'onglet Mon compte ic_notifications_black_24dp.xml-->
    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.e_upb.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />



</navigation>
