<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/pseudo"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:gravity="center"
            android:inputType="textPersonName"
            android:hint="@string/pseudo"
            android:autofillHints="@string/pseudo"
            android:textColorHint="#ff7a38"
            android:background="@drawable/inputborder"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:gravity="center"
            android:inputType="textPassword"
            android:hint="@string/mot_de_passe"
            android:autofillHints="@string/mot_de_passe"
            android:textColorHint="#ff7a38"
            android:background="@drawable/inputborder"/>

        <Switch
            android:id="@+id/switch1"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:text="@string/se_souvenir_de_moi"
            android:layout_margin="5dp"
            android:textColor="#ff7a38"
            android:theme="@style/switchtheme"/>

        <Button
            android:id="@+id/connexion"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_margin="20dp"
            android:layout_gravity="center"
            android:text="@string/connexion"
            android:textColor="#fff"
            android:background="@drawable/homebuttonborder"/>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>